Added Enterprise Activity Added Adapter for Enterprise Recycler View Hardcoded itemss for Recycler View

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,7 +18,11 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".MainActivity"></activity>
+        <activity android:name=".MainActivity" />
+        <activity
+            android:name=".enterprises"
+            android:label="@string/title_activity_enterprises"
+            android:theme="@style/AppTheme"></activity>
     </application>
 
 </manifest>
