--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,7 +14,6 @@
             android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
@@ -22,6 +21,10 @@
         <activity
             android:name=".enterprises"
             android:label="@string/title_activity_enterprises"
+            android:theme="@style/AppTheme" />
+        <activity
+            android:name=".Proyects"
+            android:label="@string/title_activity_proyects"
             android:theme="@style/AppTheme" />
     </application>
 
